--- a/package.json
+++ b/package.json
@@ -1,46 +1,59 @@
 {
-  "name": "ngx-monorepo-library-builder",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~9.1.9",
-    "@angular/common": "~9.1.9",
-    "@angular/compiler": "~9.1.9",
-    "@angular/core": "~9.1.9",
-    "@angular/forms": "~9.1.9",
-    "@angular/platform-browser": "~9.1.9",
-    "@angular/platform-browser-dynamic": "~9.1.9",
-    "@angular/router": "~9.1.9",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular/cli": "~9.1.7",
-    "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
-  }
+    "name": "monorepo-library-builder",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "library:link": "npm link ./dist/ngx-library-builder --force",
+        "library:build": "npm-run-all library:build:**",
+        "library:build:tsc": "tsc projects/ngx-library-builder/src/lib/index.ts --outDir dist/ngx-library-builder/lib",
+        "library:build:copy-manifest": "copyfiles -u 2 projects/ngx-library-builder/package.json dist/ngx-library-builder",
+        "library:build:copy-docs": "copyfiles -u 2 projects/ngx-library-builder/*.md dist/ngx-library-builder"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~9.1.9",
+        "@angular/common": "~9.1.9",
+        "@angular/compiler": "~9.1.9",
+        "@angular/core": "~9.1.9",
+        "@angular/forms": "~9.1.9",
+        "@angular/platform-browser": "~9.1.9",
+        "@angular/platform-browser-dynamic": "~9.1.9",
+        "@angular/router": "~9.1.9",
+        "@types/async": "^3.2.3",
+        "@types/fs-extra": "^9.0.1",
+        "rxjs": "~6.5.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.901.7",
+        "@angular-devkit/build-ng-packagr": "~0.901.7",
+        "@angular/cli": "~9.1.7",
+        "@angular/compiler-cli": "~9.1.9",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "@types/yargs": "^15.0.5",
+        "async": "^3.2.0",
+        "codelyzer": "^5.1.2",
+        "copyfiles": "^2.3.0",
+        "fs-extra": "^9.0.1",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~3.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "ng-packagr": "^9.0.0",
+        "npm-run-all": "^4.1.5",
+        "protractor": "~7.0.0",
+        "ts-node": "~8.3.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.8.3",
+        "yargs": "^15.3.1"
+    }
 }
