Update package.json with repo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "name": "monorepo-library-builder",
     "version": "0.0.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/deKaantje/ngx-mlb"
+    },
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
