--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,10 @@
         "README.md",
         "CHANGELOG.md"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/deKaantje/ngx-mlb"
+    },
     "dependencies": {
         "tslib": "^1.10.0",
         "async": "^3.2.0",
