--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,16 @@
 {
     "name": "ngx-mlb",
+    "version": "0.0.3",
     "description": "An Angular (8+) monorepo library builder. Builds Angular libraries and their dependent monorepo libraries in a single run.",
     "files": [
         "lib",
         "README.md",
         "CHANGELOG.md"
     ],
-    "version": "0.0.1",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/deKaantje/ngx-mlb"
+    },
     "dependencies": {
         "tslib": "^1.10.0",
         "async": "^3.2.0",
