--- a/src/package.json
+++ b/src/package.json
@@ -1,11 +1,13 @@
 {
     "name": "ngx-mlb",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "An Angular (8+) monorepo library builder. Builds Angular libraries and their dependent monorepo libraries in a single run.",
     "files": [
         "lib",
         "README.md",
-        "CHANGELOG.md"
+        "CHANGELOG.md",
+        "CODE_OF_CONDUCT.md",
+        "LICENSE.md"
     ],
     "repository": {
         "type": "git",
