Add license to package package.json

--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
         "type": "git",
         "url": "https://github.com/deKaantje/ngx-mlb"
     },
+    "license": "GNU",
     "dependencies": {
         "tslib": "^1.10.0",
         "async": "^3.2.0",
